wp-content/universal-assets/v1/scss/universal-nav.scss
/* ... */
.membership-btn {
	margin: 10px;
	padding: 5px 10px;
	background: #eb002a;
	border: solid 1px #eb002a;
	color: #fff !important;
	display: flex;
	font-size: 20px;
	justify-content: center;
	&:hover {
		color: #eb002a !important;
		background: #fff;
	}
}

 .dropdown-menu.profile-menu {
	.dropdown-links {
		padding: 15px;
		border-top: solid 1px #ccc;
		ul {
			margin: 0px;
			padding: 0px;
		}
		li.menu-item {
			height: 25px;
			font-size: 16px;
			list-style: none;
			:-moz-only-whitespace {
				display: none;
			}
			&.menu-item-event-cart {
				display: none;
			}
			a {
				color: #333;
				display: flex;
				i {
					width: 40px;
					margin-right: 0px;
					display: block !important;
				}
			}
			&.menu-item-has-children {
				.ab-submenu {
					display: none;
					position: absolute;
					left: -87%;
					top: -50%;
					background: #fff;
					padding: 15px 0 5px;
					border-top-left-radius: 5px;
					border-bottom-left-radius: 5px;
					box-shadow: 0 2px 7px 1px rgba(0,0,0,.05),0 6px 32px 0 rgba(18,43,70,.1);
					@media screen and (max-width: 550px) {
						display: none !important;
					}
					&::before {
						top: 7%;
						content: ' ';
						position: absolute;
						width: 0;
						height: 0;
						right: -7%;
						border: 7px solid #000;
						border-color: #fff;
						-webkit-transform-origin: 0 0;
						-ms-transform-origin: 0 0;
						transform-origin: 0 0;
						-webkit-transform: rotate(45deg);
						-ms-transform: rotate(45deg);
						transform: rotate(45deg);
						box-shadow: 4px -1px 3px 0 rgba(0,0,0,0.1);
						z-index: 1002;
					}
				}
				&:hover .ab-submenu {
					display: block;
				}
			}
		}
	}
	@media screen and (max-width: 805px) {
		position: relative;
		border: 0px;
		box-shadow: none;
		padding-top: 0px;
		border-radius: 0px;
		display: none;
		.dropdown-links {
			padding-bottom: 0px;
			border: 0px;
		}
		.profile-info {
			display: none !important;
		}
		#LogoutBtn {
			display: flex;
			align-items: center;
			&:before {
				font-family: "FontAwesome";
				content: "\f2f5";
				color: #999;
				font-size: 22px;
				margin-right: 18px;
			}
		}
		.menu-item a {
			padding-left: 15px !important;
		}
	}
}

body.event-espresso .site-header-custom{
   .login-section .dropdown-menu .dropdown-links {
       .menu-item-event-cart {
           display: block;
       }
   }
}

body.buddyboss-theme {
    .site-header-custom {
        width: 100% !important;
        left: 0px;
    }
    .buddypanel {
        margin-top: 121px;
        z-index: 9;
		margin-left:-230px;
		font-weight: 400;
		.bb-toggle-panel {
			.bb-icon-sidebar:before {
				content: "\e859";
			}
		}
		li a i { opacity: 1 !important; }
    }
	#page.site {
		margin-left: 0px;
	}
	&.buddypanel-open.bb-page-loaded, &.buddypanel-open.buddypanel-closed.bb-page-loaded {
		.buddypanel { margin-left: 0px }
		#page.site {
			margin-left: 230px;
			padding: 0px 10px;
		}
		@media screen and (max-width: 805px) {
			#page.site { margin-left: 0px; }
		}
		@media screen and (min-width: 805px) {
			#makey-sign {
				margin-left: 180px;
				&:hover {
					margin-left: 200px;
				}
			}
		}
	}
	&.buddypanel-closed.bb-page-loaded {
		.buddypanel { margin-left: 0px; }
		#page.site {
			margin-left: 68px;
			@media screen and (max-width: 805px) {
				margin-left: 0px;
			}
		}
		// lesson pages are set to not show any buddypanel since they have a left hand nav of their own
		&.single-sfwd-lessons #page.site {
			margin-left: 0px;
		}
	}
}
// Buddypanel Nav
body.buddypanel-open {
    #buddypanel-menu {
        .bb-menu-item {
            span { white-space: break-spaces !important; }
        }
    }
}

@media screen and (max-width: 805px) {
	body.mobile-nav {
        overflow: hidden;
        #navbar-collapse { display: none; }
	}
	#make-coin {
		display: none;
		background: #f1f1f1;
		text-align: left !important;
		padding: 10px 0px 10px 30px;
		border: solid 1px #ccc;
		font-weight: 400;
		a { padding-left: 10px; }
	}
}

.nav-separator {
    background: rgba(0,0,0,.1);
    height: 28px;
    max-height: 28px;
    width: 1px;
    display: inline-block;
    margin: 0 12px 0 12px;
    padding: 0px !important;
    vertical-align: middle;
}

// SEARCH related stuff //
#search-modal, #sb-search {
    display: none;
}

.makezine, .makercamp {
    #sb-search {
        display: block;
    }
}

.fancybox-overlay {
    background: #333;
    opacity: .95;
    width: 100vw !important;
    height: 100vh !important;
    position: fixed;
    top: 0px;
}
/* ... */

